--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,25 @@
 # Core data manipulation packages
-numpy>=1.20.0
-pandas>=1.3.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
+numpy
+pandas
+matplotlib
+seaborn
 
 # Machine learning packages
-scikit-learn>=1.0.0
+scikit-learn
 
 # NLP packages
-nltk>=3.7
+nltk
 
 # Web framework (if needed for API deployment)
-streamlit>=1.15.0
-flask>=2.0.0
+streamlit
+flask
 
 # Joblib for model serialization
-joblib>=1.1.0
-
-# Utility packages
-python-dateutil>=2.8.0
-pytz>=2021.1
+joblib
 
 # Additional packages
-pytest>=7.0.0
-python-dotenv>=0.19.0
-flake8>=4.0.0
-click>=8.0.0
-setuptools>=65.0.0
-wheel>=0.37.0
-gunicorn>=20.1.0 
+python-dotenv
+pytest
+-e .
+
+
